--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningDetailPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningDetailPage.xaml
@@ -23,7 +23,7 @@
         Aspect="AspectFill"
         HeightRequest="200"/>
 
-      <ScrollView>
+      <ScrollView VerticalOptions="FillAndExpand">
         
         <StackLayout Padding="20" Spacing="15">
         
@@ -65,12 +65,17 @@
             <Label Text="Description" FontSize="17" />
             <Label Text="{Binding Restaurant.Description}" FontSize="14" />
           </StackLayout>
-          
-        
         
         </StackLayout>
 
       </ScrollView>
+
+      <StackLayout BackgroundColor="#1A90C9" Padding="20" IsVisible="{Binding ShowRecommendedRestaurants}">
+        <Label Text="Similar restaurants recommendations" FontSize="18" TextColor="White" />
+        <Label Text="{Binding FirstRecommendedRestaurant.Name}" TextColor="White"></Label>
+        <Label Text="{Binding SecondRecommendedRestaurant.Name}" TextColor="White"></Label>
+        <Label Text="{Binding ThirdRecommendedRestaurant.Name}" TextColor="White"></Label>
+      </StackLayout>
 
     </StackLayout>
   </ContentPage.Content>
