--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/HomePage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/HomePage.xaml
@@ -3,12 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SkiResort.XamarinApp.Pages"
              xmlns:views="clr-namespace:SkiResort.XamarinApp.Views"
+             xmlns:converters="clr-namespace:SkiResort.XamarinApp.Converters"
              xmlns:ffil="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              x:Class="SkiResort.XamarinApp.Pages.HomePage"
              Title="Adventure Works Ski Resort">
 
   <ContentPage.Resources>
     <ResourceDictionary>
+
+      <converters:UserToWelcomeMessageConverter x:Key="userToWelcomeMessageConverter"></converters:UserToWelcomeMessageConverter>
+      <converters:Base64ToImageSourceConverter x:Key="base64ToImageSourceConverter"></converters:Base64ToImageSourceConverter>
 
       <Style x:Key="backgroundImageStyle" TargetType="ffil:CachedImage">
         <Setter Property="Source" Value="home_background.jpg" />
@@ -20,10 +25,6 @@
       <Style x:Key="mainStackLayoutStyle" TargetType="StackLayout">
         <Setter Property="Spacing" Value="0" />
         <Setter Property="Padding" Value="0" />
-      </Style>
-
-      <Style x:Key="placeholderLabelStyle" TargetType="Label">
-        <Setter Property="VerticalOptions" Value="CenterAndExpand" />
       </Style>
 
       <Style x:Key="stackLayoutButtonContainerStyle" TargetType="StackLayout">
@@ -42,8 +43,17 @@
     <Grid>
       <ffil:CachedImage Style="{StaticResource backgroundImageStyle}" />
       <StackLayout Style="{StaticResource mainStackLayoutStyle}">
-        <Label Style="{StaticResource placeholderLabelStyle}" />
-        <StackLayout Style="{StaticResource stackLayoutButtonContainerStyle}">
+        <StackLayout VerticalOptions="FillAndExpand">
+          <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" IsVisible="{Binding UserExists}">
+            <ffil:CachedImage Source="{Binding User.Photo, Converter={StaticResource base64ToImageSourceConverter}}" WidthRequest="200" HeightRequest="230" Aspect="AspectFit" DownsampleToViewSize="True">
+              <ffil:CachedImage.Transformations>
+                <fftransformations:CircleTransformation BorderSize="10" BorderHexColor="#FFFFFF" />
+              </ffil:CachedImage.Transformations>
+            </ffil:CachedImage>
+            <Label FormattedText="{Binding User, Converter={StaticResource userToWelcomeMessageConverter}}" TextColor="White" />
+          </StackLayout>
+        </StackLayout>
+        <StackLayout Style="{StaticResource stackLayoutButtonContainerStyle}" IsVisible="{Binding ShowLoginButton}">
           <Button Style="{StaticResource loginButtonStyle}" Command="{Binding ClickLoginCommand}" />
         </StackLayout>
         <views:WeatherWidget />
