--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/Assets/style.css
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/Assets/style.css
@@ -4,16 +4,18 @@
     overflow: hidden;
 }
 
-iframe {
+body {
     width: 100%;
     height: 100%;
-    border: none;
 }
 
-#reportContainer {
+iframe {
+    border: none;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 120%;
 }
